# Toy-Bank

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: commit-hook.yml  pipeline.yml  release.yml  stabilization.yml
hooks/: commit-msg
src/: accounts.py  cli.py  main.py
src/domain/: account_types.py  bank_service.py
src/persistence/: account_repository.py
src/presentation/: balance_router.py  bank_cli.py  dependencies.py  schemas.py
tests/: test_bank_service.py
