[project]
name = "toy-bank"
version = "0.1.0"
description = "A simple toy project for practising GitLab Flow and CI/CD"
authors = [
    { name = "Rômulo Alves de Morais Rocha", email = "amr.rmulo@gmail.com" },
    { name = "Dinorah Farias", email = "dinorahfarias@outlook.com" },
    { name = "Rodrigo Faustino", email = "" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

ignore = [
    "E501",
    "B008"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
explicit_package_bases = true
mypy_path = "."
